--- a/.github/workflows/build-kernelsu.yml
+++ b/.github/workflows/build-kernelsu.yml
@@ -29,14 +29,11 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y \
-          bc bison build-essential ccache curl flex 
-g++-multilib \
+          bc bison build-essential ccache curl flex g++-multilib \
            gcc-multilib git gnupg gperf liblz4-tool \
            libncurses-dev libsdl1.2-dev libssl-dev \
-           libxml2 libxml2-utils lzop pngcrush rsync schedtool 
- squashfs-tools \
-           xsltproc zip zlib1g-dev python3 python3-pip 
- device-tree-compiler \
+           libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools \
+           xsltproc zip zlib1g-dev python3 python3-pip device-tree-compiler \
            gcc-aarch64-linux-gnu wget
 
     - name: 设置ccache
