--- a/.github/workflows/build-kernelsu.yml
+++ b/.github/workflows/build-kernelsu.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: 最大化构建空间
@@ -37,27 +37,32 @@ jobs:
           libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools \
           xsltproc zip zlib1g-dev python3 python3-pip device-tree-compiler wget
 
-        # 尝试安装交叉编译器（兼容多个版本）
-        sudo apt install -y gcc-aarch64-linux-gnu || \
-        sudo apt install -y gcc-12-aarch64-linux-gnu || \
-        sudo apt install -y gcc-11-aarch64-linux-gnu || \
-        sudo apt install -y gcc-10-aarch64-linux-gnu
+        # 安装ARM64交叉编译工具链
+        sudo apt install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
-        # 确认安装的GCC版本
-        aarch64-linux-gnu-gcc --version || echo "使用默认版本"
+        # 验证GCC版本
+        aarch64-linux-gnu-gcc --version
 
     - name: 设置ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
         max-size: "2G"
 
+    - name: 设置工作目录
+      run: |
+        mkdir -p $HOME/kernel_build
+        echo "KERNEL_DIR=$HOME/kernel_build" >> $GITHUB_ENV
+
     - name: 克隆内核源码
       run: |
+        cd $HOME/kernel_build
         git clone https://github.com/MiCode/Xiaomi_Kernel_OpenSource.git -b camellia-r-oss kernel --depth=1
         echo "内核源码克隆完成"
+        ls -la kernel/
 
     - name: 克隆KernelSU
       run: |
+        cd $HOME/kernel_build
         if [ -n "${{ github.event.inputs.kernelsu_version }}" ]; then
           git clone https://github.com/tiann/KernelSU.git -b ${{ github.event.inputs.kernelsu_version }} --depth=1
         else
@@ -66,94 +71,111 @@ jobs:
         cd KernelSU
         echo "KernelSU版本: $(git describe --tags --always)"
         cd ..
-        echo "KernelSU目录内容:"
+        echo "检查KernelSU内核模块:"
         ls -la KernelSU/kernel/
 
     - name: 集成KernelSU到内核
       run: |
-        cd kernel
+        cd $HOME/kernel_build/kernel
 
-        # 使用绝对路径创建符号链接
-        KERNELSU_PATH="$(pwd)/../KernelSU/kernel"
-        echo "KernelSU路径: $KERNELSU_PATH"
+        # 直接复制KernelSU到drivers目录（避免符号链接权限问题）
+        cp -r ../KernelSU/kernel drivers/kernelsu
 
-        # 创建符号链接
-        ln -sf "$KERNELSU_PATH" drivers/kernelsu
-
-        # 验证链接是否创建成功
-        if [ -e "drivers/kernelsu" ]; then
-          echo "KernelSU链接创建成功"
+        # 验证复制成功
+        if [ -d "drivers/kernelsu" ]; then
+          echo "KernelSU复制成功"
           ls -la drivers/kernelsu/
         else
-          echo "符号链接失败，尝试直接复制"
-          cp -r ../KernelSU/kernel drivers/kernelsu
-          if [ -d "drivers/kernelsu" ]; then
-            echo "直接复制成功"
-          else
-            echo "错误：无法创建kernelsu目录"
-            exit 1
-          fi
+          echo "错误：KernelSU复制失败"
+          exit 1
         fi
 
         # 修改Makefile
         if ! grep -q "kernelsu" drivers/Makefile; then
           echo 'obj-y += kernelsu/' >> drivers/Makefile
           echo "已添加kernelsu到Makefile"
-        else
-          echo "Makefile已包含kernelsu"
         fi
 
         # 修改Kconfig
         if ! grep -q "kernelsu" drivers/Kconfig; then
           echo 'source "drivers/kernelsu/Kconfig"' >> drivers/Kconfig
           echo "已添加kernelsu到Kconfig"
-        else
-          echo "Kconfig已包含kernelsu"
         fi
 
         echo "KernelSU集成完成"
 
     - name: 配置内核
       run: |
-        cd kernel
+        cd $HOME/kernel_build/kernel
+
+        # 设置环境变量
         export ARCH=arm64
         export SUBARCH=arm64
         export CROSS_COMPILE=aarch64-linux-gnu-
+        export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+
+        # 禁用栈保护（解决编译器不支持的问题）
+        export KCFLAGS="-w"
+        export CONFIG_CC_STACKPROTECTOR_STRONG=n
 
         # 使用默认配置
         make camellia_defconfig
 
-        # 添加KernelSU配置
-        cat >> .config << EOF
-        CONFIG_KPROBES=y
-        CONFIG_HAVE_KPROBES=y
-        CONFIG_KPROBE_EVENTS=y
-        CONFIG_KSU=y
-        EOF
+        # 修改配置：禁用栈保护，启用KernelSU
+        scripts/config --disable CONFIG_CC_STACKPROTECTOR_STRONG
+        scripts/config --disable CONFIG_CC_STACKPROTECTOR
+        scripts/config --enable CONFIG_KPROBES
+        scripts/config --enable CONFIG_HAVE_KPROBES
+        scripts/config --enable CONFIG_KPROBE_EVENTS
+
+        # 手动添加KernelSU配置（如果config工具不识别）
+        echo "CONFIG_KSU=y" >> .config
 
         # 更新配置
         make olddefconfig
 
-        echo "检查KernelSU配置:"
-        grep -E "CONFIG_KSU|CONFIG_KPROBES" .config || echo "警告：KernelSU配置可能未启用"
+        echo "验证配置:"
+        grep -E "STACKPROTECTOR|KSU|KPROBES" .config
 
     - name: 编译内核
       run: |
-        cd kernel
+        cd $HOME/kernel_build/kernel
+
+        # 设置编译环境
         export ARCH=arm64
         export SUBARCH=arm64
         export CROSS_COMPILE=aarch64-linux-gnu-
+        export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
         export USE_CCACHE=1
-        export CCACHE_DIR=~/.ccache
+        export CCACHE_DIR=$HOME/.ccache
 
-        echo "开始编译内核..."
-        make -j$(nproc) Image.gz-dtb
+        # 禁用栈保护
+        export KCFLAGS="-w"
+        export CONFIG_CC_STACKPROTECTOR_STRONG=n
+
+        # 清理之前的编译（如果有）
+        make clean
+
+        echo "开始编译内核（使用$(nproc)个线程）..."
+        make -j$(nproc) Image.gz-dtb 2>&1 | tee build.log || {
+          echo "编译失败，显示最后100行日志:"
+          tail -n 100 build.log
+          exit 1
+        }
 
         echo "编译完成，检查输出文件:"
-        ls -lh arch/arm64/boot/Image.gz-dtb
+        if [ -f arch/arm64/boot/Image.gz-dtb ]; then
+          echo "内核编译成功！"
+          ls -lh arch/arm64/boot/Image.gz-dtb
+        else
+          echo "错误：未找到编译输出文件"
+          exit 1
+        fi
 
     - name: 准备打包工具
       run: |
+        cd ${{ github.workspace }}
+
         # 下载magiskboot
         wget -q https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk
         unzip -j Magisk-*.apk 'lib/x86_64/libmagiskboot.so' -d .
@@ -161,91 +183,90 @@ jobs:
         chmod +x magiskboot
         rm Magisk-*.apk
 
-        # 创建打包脚本
-        cat > pack_boot.sh << 'SCRIPT_END'
-        #!/bin/bash
-        echo "===== Boot.img打包说明 ====="
-        echo ""
-        echo "使用方法："
-        echo "1. 从手机提取原始boot.img:"
-        echo "   adb shell su -c 'dd if=/dev/block/by-name/boot of=/sdcard/boot.img'"
-        echo "   adb pull /sdcard/boot.img"
-        echo ""
-        echo "2. 解包原始boot.img:"
-        echo "   ./magiskboot unpack boot.img"
-        echo ""
-        echo "3. 替换内核:"
-        echo "   cp Image.gz-dtb kernel"
-        echo ""
-        echo "4. 重新打包:"
-        echo "   ./magiskboot repack boot.img"
-        echo "   (生成new-boot.img)"
-        echo ""
-        echo "5. 刷入新内核:"
-        echo "   adb reboot bootloader"
-        echo "   fastboot flash boot new-boot.img"
-        echo "   fastboot reboot"
-        SCRIPT_END
-        chmod +x pack_boot.sh
+        # 创建使用说明
+        cat > README.md << 'END_README'
+        # KernelSU内核使用说明
 
-    - name: 收集编译信息
+        ## 关于KernelSU
+        KernelSU是内核级的root方案，与Magisk（Kitsune Mask）的关系：
+        - KernelSU和Magisk是两种不同的root方案
+        - 刷入KernelSU后，不再需要Magisk/Kitsune Mask
+        - KernelSU有自己的管理器APP和模块系统
+        - 原Magisk模块需要转换才能在KernelSU使用
+
+        ## 刷入步骤
+
+        1. 提取原始boot.img:
+           ```
+           adb shell su -c 'dd if=/dev/block/by-name/boot of=/sdcard/boot.img'
+           adb pull /sdcard/boot.img
+           ```
+
+        2. 制作新boot.img:
+           ```
+           ./magiskboot unpack boot.img
+           cp Image.gz-dtb kernel
+           ./magiskboot repack boot.img
+           ```
+
+        3. 刷入新内核:
+           ```
+           adb reboot bootloader
+           fastboot flash boot new-boot.img
+           fastboot reboot
+           ```
+
+        4. 安装KernelSU管理器:
+           - 下载地址: https://github.com/tiann/KernelSU/releases
+           - 安装最新版本的KernelSU.apk
+
+        ## 重要提醒
+        - 刷入前务必备份原始boot.img
+        - 首次使用需要在KernelSU管理器中授予应用root权限
+        - 原Magisk模块不能直接使用，需要适配
+        END_README
+
+    - name: 收集编译产物
       run: |
-        cat > build_info.txt << 'INFO_END'
-        ===== KernelSU内核编译信息 =====
+        mkdir -p output
+        cp $HOME/kernel_build/kernel/arch/arm64/boot/Image.gz-dtb output/
+        cp magiskboot output/
+        cp README.md output/
 
+        # 创建版本信息
+        cat > output/version.txt << END_VERSION
         编译时间: $(date '+%Y-%m-%d %H:%M:%S')
         设备: 红米Note 10 (camellia)
-        处理器: MediaTek Dimensity 700
-        Android版本: 11 (R)
-
-        KernelSU版本: $(cd KernelSU && git describe --tags --always)
-        内核文件: Image.gz-dtb
-        文件大小: $(ls -lh kernel/arch/arm64/boot/Image.gz-dtb | awk '{print $5}')
-
-        GCC版本:
-        $(aarch64-linux-gnu-gcc --version | head -n1)
-
-        使用说明:
-        1. 下载本压缩包
-        2. 解压获得Image.gz-dtb和工具
-        3. 按照pack_boot.sh中的说明打包boot.img
-        4. 刷入手机测试
-
-        注意：请先备份原始boot.img！
-        INFO_END
-
-        # 执行变量替换
-        eval "echo \"$(cat build_info.txt)\"" > build_info_final.txt
-        mv build_info_final.txt build_info.txt
+        内核源码: camellia-r-oss
+        KernelSU版本: $(cd $HOME/kernel_build/KernelSU && git describe --tags --always)
+        编译器: $(aarch64-linux-gnu-gcc --version | head -n1)
+        END_VERSION
 
     - name: 上传编译产物
       uses: actions/upload-artifact@v4
       with:
-        name: kernelsu-camellia
-        path: |
-          kernel/arch/arm64/boot/Image.gz-dtb
-          magiskboot
-          pack_boot.sh
-          build_info.txt
+        name: kernelsu-camellia-kernel
+        path: output/
 
     - name: 显示编译摘要
       run: |
-        echo "## 🎉 编译成功！" >> $GITHUB_STEP_SUMMARY
+        echo "## ✅ 编译成功！" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 📱 设备信息" >> $GITHUB_STEP_SUMMARY
         echo "- 设备: 红米Note 10 (camellia)" >> $GITHUB_STEP_SUMMARY
         echo "- 处理器: MediaTek Dimensity 700" >> $GITHUB_STEP_SUMMARY
-        echo "- Android版本: 11 (R)" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 📦 编译产物" >> $GITHUB_STEP_SUMMARY
-        echo "- 内核文件: Image.gz-dtb" >> $GITHUB_STEP_SUMMARY
-        echo "- 文件大小: $(ls -lh kernel/arch/arm64/boot/Image.gz-dtb | awk '{print $5}')" >> $GITHUB_STEP_SUMMARY
-        echo "- KernelSU: ✅ 已集成" >> $GITHUB_STEP_SUMMARY
+        echo "### 🎯 KernelSU vs Magisk" >> $GITHUB_STEP_SUMMARY
+        echo "- KernelSU是独立的root方案" >> $GITHUB_STEP_SUMMARY
+        echo "- 不需要Magisk/Kitsune Mask" >> $GITHUB_STEP_SUMMARY
+        echo "- 有专门的KernelSU管理器APP" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 📥 下载" >> $GITHUB_STEP_SUMMARY
-        echo "请在Actions页面下载 **kernelsu-camellia.zip**" >> $GITHUB_STEP_SUMMARY
+        echo "### 📦 下载内容" >> $GITHUB_STEP_SUMMARY
+        echo "- Image.gz-dtb: 编译的内核" >> $GITHUB_STEP_SUMMARY
+        echo "- magiskboot: 打包工具" >> $GITHUB_STEP_SUMMARY
+        echo "- README.md: 使用说明" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### ⚠️ 注意事项" >> $GITHUB_STEP_SUMMARY
-        echo "1. 刷入前请备份原始boot.img" >> $GITHUB_STEP_SUMMARY
-        echo "2. 需要解锁Bootloader" >> $GITHUB_STEP_SUMMARY
-        echo "3. 首次刷入可能需要清除数据" >> $GITHUB_STEP_SUMMARY
+        echo "1. 备份原始boot.img" >> $GITHUB_STEP_SUMMARY
+        echo "2. 安装KernelSU管理器APP" >> $GITHUB_STEP_SUMMARY
+        echo "3. 原Magisk模块需要转换" >> $GITHUB_STEP_SUMMARY
